# grainlegumes-pino

./: .gitignore  Dockerfile  README.md  environment-dev.yml  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: quality.yml
data_generation/matlab/: batch_run.m  build_batch_dataset.py  merge_batch_cases.py
data_generation/matlab/functions/core/: run_comsol_case.m  sample_parameters.m
data_generation/matlab/functions/test/: test_generate_permability_fields.m
model_training/notebooks/: EDA.ipynb  eda.ipynb  eval.ipynb  evaluation.ipynb  f_eval.ipynb  training_pipeline.ipynb
model_training/src/: __init__.py
model_training/src/analysis/: __init__.py  analysis_artifacts.py  analysis_interference.py
model_training/src/analysis/evaluation/: __init__.py  evaluation_dataframe.py
model_training/src/analysis/evaluation/evaluation_plot/: evaluation_plot_global_error_analysis.py  evaluation_plot_sample_viewer.py
model_training/src/dataset/: dataset_base.py  dataset_simulation.py
model_training/src/dataset/dataset_module/: dataset_module_flow.py
model_training/src/eda/: __init__.py  eda_dataframe.py  eda_spectral_analysis.py
model_training/src/eda/eda_plot/: __init__.py  eda_plot_spectral_analysis.py
model_training/src/evaluation/: __init__.py  evaluation_inference.py
model_training/src/evaluation/evaluation_plot/: __init__.py
model_training/src/evaluation/evaluation_plots/: __init__.py
model_training/src/model/: model_train.py
model_training/src/sensitivity/: __init__.py
model_training/src/sensitivity/sensitivity_plot/: __init__.py
model_training/src/sensitivity/sensitivity_plots/: __init__.py
model_training/src/util/: __init__.py  util_data.py  util_metrics.py  util_nb.py  util_plot.py  util_plot_components.py
model_training/training/: train_base.py  train_fno.py
scripts/: container_exec.sh  docker_data_export.ps1  docker_data_export.sh  docker_data_import.ps1  docker_data_import.sh  hpc_start_container.sh  hpc_train.sh  run_auto.sh  run_cluster_container.sh
