[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grainlegumes-pino"
version = "0.1.0"
description = "Synthetic permeability generation and PINO training pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rino M. Albertin" }]

[tool.setuptools]
package-dir = { "" = "model_training" }

[tool.setuptools.packages.find]
where = ["model_training/src"]
include = ["src*"]

# --- Code Style & Linting ---
[tool.ruff]
line-length = 150
target-version = "py311"
extend-exclude = ["venv", ".venv", "data", "outputs", "results", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "FBT001", "FBT002", "FBT003", "PLR0913", "N806", "N803"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
strict_optional = true

[tool.nbqa.config]
ruff = ["--fix", "--exit-zero"]